Fix checkmark transition on iOS

--- a/src/main/resources/scss/contacts/components/_selectable-entity.scss
+++ b/src/main/resources/scss/contacts/components/_selectable-entity.scss
@@ -12,7 +12,8 @@
 		font-weight: 700;
 	}
 	&::after {
-		content: '';
+		content: '\221a';
+		color: white;
 		box-shadow: 0 0 2px 1px rgba(0,0,0,0.5), inset 0 3px 4px rgba(0,0,0,.2);
 		border-radius: 50%;
 		width: $iconsize;
@@ -24,14 +25,12 @@
 		transform: translateY(-50%);
 		font-size: $iconsize;
 		font-family: 'icomoon';
-		background-color:rgba(255,255,255,0);
+		background-color:rgba(255,255,255,1);
 		transition: background-color .5s;
 	}
 	&.selected {
 		&::after {
-			content: '\221a';
-			background-color: $primary-blue;
-			color: white;
+			background-color: rgba($primary-blue, 1);
 			box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.5),
 			inset 0 1px 1px 0px rgba(255, 255, 255, 0.6);
 		}
